--- a/views/createPlayer.ejs
+++ b/views/createPlayer.ejs
@@ -5,29 +5,13 @@
 
   <a href="/">Home</a>
 
-  <form id="add-player-form" action="/" method="POST">
+  <form id="add-player-form" action="/api/players" method="POST">
     <label for="name">Player Name:</label><br />
     <input type="text" id="name" name="name" /><br />
     <label for="type">type:</label><br />
     <input type="text" id="type" name="type" /><br />
     <button type="submit">Add Player</button>
   </form>
-
-  <!-- <ul>
-    <% players.forEach(player => { %>
-    <li>
-      <b>ID: </b><%= player.id %> <br />
-      <b>Player Name: </b><%= player.name %><br />
-      <b>Player Type: </b><%= player.type %>
-
-      <form id="delete-player-form" action="/<%=player.id %>" method="POST">
-        <input type="hidden" name="_method" value="DELETE">
-        <input type="hidden" name="id" value="<%= player.id  %>">
-        <button type="submit">Delete</button>
-      </form>
-    </li>
-    <% }); %>
-  </ul> -->
 
 </body>
 
